--- a/src/components/Comparisons/components/Row/styles.scss
+++ b/src/components/Comparisons/components/Row/styles.scss
@@ -1,17 +1,25 @@
 @import '../../../../variables';
 @import '../../../../mixins';
 
+$label-width: 120px;
+$bar-height: 10px;
+$row-height: $bar-height * 3;
+
 .row {
-  margin: auto;
+  margin: 0 auto 20px;
+
+  &:hover .row__bar-value {
+    opacity: 1;
+  }
 
   &__bar--negative {
     .row__bar-primary,
     .row__bar-secondary {
-      right: 0;
+      left: auto;
+      right: $label-width;
     }
 
     .row__bar-value {
-      bottom: -4px;
       left: 0;
       position: absolute;
       right: auto;
@@ -23,19 +31,22 @@
   }
 
   &--negative &__bar {
-    height: 60px;
-    margin-bottom: 40px;
-    margin-top: -25px;
-    width: 50%;
+    height: $row-height;
+    left: $label-width / 2;
+    width: calc(50% - #{$label-width});
   }
 
   &--negative &__title {
-    border-bottom: solid 3px $primary-color;
-    display: inline;
-  }
-
-  &--negative &__bar-primary {
-    height: 60px;
+    border: solid 1px $orange;
+    font-size: 1rem;
+    left: 0;
+    line-height: $row-height;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    width: $label-width;
+    z-index: 1;
   }
 
   &__title {
@@ -44,7 +55,7 @@
     display: inline-block;
     font-size: 1rem;
     overflow: hidden;
-    padding-top: 17px;
+    // padding-top: 17px;
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 100%;
@@ -52,10 +63,10 @@
 
   &__bar {
     display: block;
-    font-size: 1rem;
-    line-height: 2.1rem;
+
     position: relative;
     width: 100%;
+    // padding: 10px 0;
 
     @include tablet-up {
       display: inline-block;
@@ -64,34 +75,32 @@
 
     &-primary,
     &-secondary {
-      border-bottom: solid 6px $primary-color;
+      border-bottom: solid $bar-height $primary-color;
+      bottom: 50%;
       box-sizing: border-box;
       color: $primary-color;
       position: absolute;
     }
 
     &-secondary {
-      border-bottom: solid 6px $secondary-color;
+      border-bottom: solid $bar-height $secondary-color;
+      bottom: auto;
       color: $secondary-color;
-      height: 54px;
       line-height: 1.5rem;
+      top: 50%;
     }
   }
 
   &__bar-value {
-    bottom: -4px;
-    font-size: 0.7rem;
+    bottom: 0;
+    font-size: 1.2rem;
+    opacity: 0;
     position: absolute;
     right: 0;
-    @include tablet-up {
-      font-size: 1.2rem;
-    }
+    transition: opacity 200ms ease-in-out;
   }
 
-  &__bar-primary &__bar-value {
-    bottom: -30px;
-    @include tablet-up {
-      bottom: -33px;
-    }
+  &__bar-secondary &__bar-value {
+    bottom: -1 * $row-height - 3px;
   }
 }
