--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -10,7 +10,7 @@
   position: absolute;
   right: 0;
   text-align: center;
-
+  z-index: 9999;
   @include desktop-up {
     height: 55px;
     position: fixed;
