Update readme, footer URLs

--- a/src/components/Categories/components/Info/styles.scss
+++ b/src/components/Categories/components/Info/styles.scss
@@ -61,4 +61,12 @@ $size: 20px;
       width: 180px;
     }
   }
+
+  &__link {
+    color: $orange;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
 }
